styles/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


body {
    font-family: 'Fredoka', sans-serif;
    background: linear-gradient(45deg, rgba(239, 232, 223, 0.85), rgba(182, 210, 221, 0.85), rgba(222, 164, 189, 0.85), rgba(165, 129, 196, 0.85), rgba(170, 235, 152, 0.85), rgba(138, 220, 222, 0.85));
    background-size: 300% 300%;
    animation: gradientAnimation 15s ease infinite;
}

#canvas {
    position: absolute;
    z-index: 333;
}

#lab-but {
    max-width: fit-content;
    margin: 0 auto 3rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

.titlecontainer {
    margin-top: auto;
}

/* LAYERD TEXT ZA NAREDIT OUTLINE NA CUSTOM FONTU */
/* MAIN TEXT*/
.nameTitle {
    color: rgb(255, 220, 253);
    font-size: 50px;
    position: relative;
}

/* LAYERD TEXT ODZADAJ Z-INDEX POMEMBEN, VECJI WEBKIT TEXT STROKE DEBELJESI OUTLINE*/
.nameTitle::before {
    content: "Mijta's Labyrinth";
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    color: rgb(127, 172, 255);
    -webkit-text-stroke: 6px rgb(127, 172, 255);
}

#main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-width: 100vh;
    min-height: 100vh;
}

#title {
    font-size: 2vh;
}

.qustn {
    height: 4vh;
}

#crta {
    flex-direction: row;
    border: 1px rgb(127, 172, 255) solid;
    border-radius: 10px;
}

.btns {
    display: flex;
    justify-content: center;
    margin: 0 auto auto;
    align-items: center;
    flex-direction: column;
    border: 1px rgb(127, 172, 255) solid;
    border-radius: 10px;
    padding: 2px;
    background-color: rgba(202, 252, 255, 0.2);
    width: 25rem;
}

button {
    border: 1px solid rgb(127, 172, 255);
    border-radius: 5px;
    padding: 1vh;
    background-color: rgb(255, 220, 253);
    color: rgb(127, 172, 255);
    margin: 10px;
    font-family: 'Fredoka', sans-serif;
}

button:hover {
    cursor: pointer;
}

button:disabled {
    color: rgb(223, 109, 190);
    cursor: not-allowed;
}

#cd-side {
    padding-left: 4vh;
}

.slidecontainer {
    border: 1px solid rgb(127, 172, 255);
    border-radius: 5px;
    padding: 1vh;
    background-color: rgba(202, 252, 255, 0.2);
    width: 5rem;
    height: 50vh;
    display: block;
    align-items: center;
    justify-content: center;
}

.slidenumbers {
    display: flex;
    flex-direction: row;
    align-items: center;
    color: rgb(127, 172, 255);
    justify-content: center;
}

input[type="range"] {
    margin-left: 1.5rem;
    -webkit-appearance: none;
    appearance: none;
    writing-mode: bt-rl;
    width: 0.5rem;
    height: 90%;
    background: none;
    outline: none;
    cursor: pointer;
}

input[type="range"]::-moz-range-track {
    background: linear-gradient(rgb(138, 240, 222), rgb(170, 235, 1525), rgb(165, 129, 196));
    height: 100%;
    width: 0.5rem;
    border: none;
    border-radius: 5px;
}

input[type="range"]::-moz-range-thumb {
    -webkit-appearance: none;
    appearance: none;
    background-color: rgb(127, 172, 255);
    border: 1px rgb(127, 172, 255) solid;
    border-radius: 10px;
    height: 1rem;
    width: 1rem;
}

input[type="range"]::-webkit-slider-runnable-track {
    background: linear-gradient(rgb(165, 129, 196), rgb(170, 235, 1525), rgb(138, 240, 222));
    height: 100%;
    width: 0.5px;
    border: none;
    border-radius: 5px;
    writing-mode: vertical-lr;
    transform: rotate(180deg);
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    background-color: rgb(127, 172, 255);
    border-radius: 10px;
    height: 1rem;
    width: 1rem;
    /*margin-top = (track height in pixels = 8 / 2) - (thumb height in pixels = 16 /2)  da centeram thumb ce ne je prevec dol */
    margin-left: -4px;
}

.btn-sa{
    border: 1px solid rgb(127, 172, 255);
    border-radius: 5px;
    padding: 1vh;
    background-color: rgb(255, 220, 253);
    color: rgb(127, 172, 255);
    margin: 10px;
    font-family: 'Fredoka', sans-serif;
}

.nameTitle:hover{
    cursor: pointer;
}

@keyframes gradientAnimation {
    0% {
        background-position: 0% 50%;
    }

    50% {
        background-position: 100% 50%;
    }

    100% {
        background-position: 0% 50%;
    }
}

